--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h2>漫画のページ数見積もり</h2>
-    <textarea id="scriptInput" rows="5" cols="50" placeholder="セリフを入力してください（「」で区切る）"></textarea><br>
+    <textarea id="scriptInput" rows="5" cols="50" placeholder="セリフを入力してください"></textarea><br>
     <button onclick="calculatePages()">計算</button>
+    <h3>Result</h3>
     <p id="result"></p>
 
     <script>
