--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h2>漫画のページ数見積もり</h2>
     <textarea id="scriptInput" rows="5" cols="50" placeholder="セリフを入力してください"></textarea><br>
     <button onclick="calculatePages()">計算</button>
-    <h3>Result</h3>
-    <p id="result"></p>
+    
+    <p id="result"><h3>Result</h3></p>
 
     <script>
         function calculatePages() {
