--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <h2>漫画のページ数見積もり</h2>
     <textarea id="scriptInput" rows="5" cols="50" placeholder="セリフを入力してください"></textarea><br>
     <button onclick="calculatePages()">計算</button>
+
+    <ul>
+        <li>「セリフ1」「セリフ2」のような形式で入力してください。</li>
+        <li>「」、。や改行はカウントしません。</li>
+        <li>あくまで目安の算出用のツールです。予めご了承ください。</li>
+    </ul>
     
     <p id="result"><h3>Result</h3></p>
 
