--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 
     <ul>
         <li>「セリフ1」「セリフ2」のような形式で入力してください。</li>
-        <li>「」、。や改行はカウントしません。</li>
-        <li>あくまで目安の算出用のツールです。予めご了承ください。</li>
+            <ul>以下はカウントしません。
+                <li>「」、。など</li>
+                <li>改行</li>
+                <li>「」外の文字</li>
+            </ul>
+        <li>あくまで"目安"の算出用のツールです。予めご了承ください。</li>
     </ul>
     
     <p id="result"><h3>Result</h3></p>
