--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <li>あくまで"目安"の算出用のツールです。予めご了承ください。</li>
     </ul>
     
-    <p id="result"><h3>Result</h3></p>
+    <h3>Result</h3>
+    <p id="result"></p>
 
     <script>
         function calculatePages() {
