--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <ul>
         <li>「セリフ1」「セリフ2」のような形式で入力してください。</li>
-        <li>
-            <ul>以下はカウントしません。
+        <li>以下はカウントしません。
+            <ul>
                 <li>「」、。など</li>
                 <li>改行</li>
                 <li>「」外の文字</li>
