--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>漫画ページ数見積もり</title>
+    <title>ページ数見積もり</title>
 </head>
 <body>
-    <h2>漫画のページ数見積もり</h2>
+    <h2>ページ数見積もり</h2>
     <textarea id="scriptInput" rows="5" cols="50" placeholder="セリフを入力してください"></textarea><br>
     <button onclick="calculatePages()">計算</button>
 
