--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         </li>
         <li>あくまで"目安"の算出用のツールです。予めご了承ください。</li>
     </ul>
+
+    <p>本ツールは下記サービス用に作成したものです。</p>
+    <p><a href="https://skima.jp/item/detail?item_id=295735" target="_blank">https://skima.jp/item/detail?item_id=295735</a></p>
     
     <h3>Result</h3>
     <p id="result"></p>
