--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </ul>
 
 
-    <p>本ツールは下記サービス用に作成したものです。</p>
-    <p><a href="https://skima.jp/item/detail?item_id=295735" target="_blank">https://skima.jp/item/detail?item_id=295735</a></p>
+    <p style="line-height: 1.2;">本ツールは下記サービス用に作成したものです。</p>
+    <p style="line-height: 1.2;"><a href="https://skima.jp/item/detail?item_id=295735" target="_blank">https://skima.jp/item/detail?item_id=295735</a></p>
     
     <h3>Result</h3>
     <p id="result"></p>
