--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <textarea id="scriptInput" rows="5" cols="50" placeholder="セリフを入力してください"></textarea><br>
     <button onclick="calculatePages()">計算</button>
 
-    <ul>
+    <ul style="margin-bottom: 2rem;">
         <li>「セリフ1」「セリフ2」のような形式で入力してください。</li>
         <li>以下はカウントしません：
             <ul>
@@ -23,10 +23,10 @@
     </ul>
 
 
-    <p style="line-height: 1.2;">本ツールは下記サービス用に作成したものです。</p>
-    <p style="line-height: 1.2;"><a href="https://skima.jp/item/detail?item_id=295735" target="_blank">https://skima.jp/item/detail?item_id=295735</a></p>
+    <p style="line-height: 0.4;">本ツールは下記サービス用に作成したものです。</p>
+    <p style="line-height: 0.4;"><a href="https://skima.jp/item/detail?item_id=295735" target="_blank">https://skima.jp/item/detail?item_id=295735</a></p>
     
-    <h3>Result</h3>
+    <h3 style="line-height: 1; margin-top: 3rem;">Result</h3>
     <p id="result"></p>
 
     <script>
