--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <p style="line-height: 0.4;">本ツールは下記サービス用に作成したものです。</p>
-    <p style="line-height: 0.4;"><a href="https://skima.jp/item/detail?item_id=295735" target="_blank">https://skima.jp/item/detail?item_id=295735</a></p>
+    <p style="line-height: 0.4;"><a href="https://tsunagu.cloud/products/31690" target="_blank">https://tsunagu.cloud/products/31690</a></p>
     
     <h3 style="line-height: 1; margin-top: 3rem;">Result</h3>
     <p id="result"></p>
